<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="home">首页</string>
    <string name="exchange">交易中心</string>
    <string name="outside_exchange">场外交易</string>
    <string name="mine">我的</string>
    <string name="click_exit">再按一次退出程序</string>
    <string name="more">更多</string>
    <string name="cooperative_business">合作商家</string>
    <string name="loading_data">数据加载中…</string>
    <string name="pull_to_refresh_1">加载中…</string>
    <string name="pull_to_refresh_2">松开刷新</string>
    <string name="pull_to_refresh_3">下拉刷新</string>
    <string name="push_to_refresh_2">松开加载更多</string>
    <string name="push_to_refresh_3">上拉加载更多</string>
    <string name="syl_1">盛源链(MUC/USD)</string>
    <string name="syl">盛源链</string>
    <string name="login">登 录</string>
    <string name="quotation">行情</string>
    <string name="exchange_amount">日成交量</string>
    <string name="exchange_money">日成交额</string>
    <string name="current_price">当前价</string>
    <string name="buy">买</string>
    <string name="sold">卖</string>
    <string name="buy_input">买入</string>
    <string name="buy_input_1">买 入</string>
    <string name="sold_out">卖出</string>
    <string name="sell">出售</string>
    <string name="cancel_order">撤销</string>
    <string name="exchange_entrust_recod">委托记录</string>
    <string name="amount">数量</string>
    <string name="amount_1">数量：</string>
    <string name="amount_input_notice">请输入数量</string>
    <string name="total_money_dollars">总额($)</string>
    <string name="unit_price">单价</string>
    <string name="unit_price_1">单价：</string>
    <string name="buy_price_input">请输入购买单价</string>
    <string name="exchange_password">交易密码</string>
    <string name="exchange_password_star">交易密码</string>
    <string name="exchange_password_1">交易密码：</string>
    <string name="exchange_password_again">重复交易密码</string>
    <string name="exchange_password_input_notice">请输入交易密码</string>
    <string name="total_money">总资产</string>
    <string name="forzen_money_xt">冻结资产(XT)</string>
    <string name="available_money_dollar">可用美金</string>
    <string name="select_icon">选择链</string>
    <string name="amount_total_money_xt">账户总资产(XT)</string>
    <string name="amount_available_money_xt">可用资产(XT)</string>
    <string name="amount_frozen_money_xt">冻结资产(XT)</string>
    <string name="recharge">充值</string>
    <string name="trading_market">交易大盘</string>
    <string name="login_hint_notice">您的登录账号</string>
    <string name="login_hint_password">您的登录密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="register">注 册</string>
    <string name="register_user_name_notice">字母、数字、6–16个字符</string>
    <string name="register_phone_notice">您的手机号</string>
    <string name="verification_code">验证码</string>
    <string name="verification_code_null">验证码不能为空</string>
    <string name="verification_code_six_number">验证码必须为六位数字</string>
    <string name="password_one_notice">您的登录密码</string>
    <string name="password_two_notice">再次输入密码</string>
    <string name="register_agreement_title_notice">用户注册即表示同意</string>
    <string name="register_agreement_name">《用户注册协议》</string>
    <string name="get_rigister_getvertify_code">重新发送(<xliff:g id="num">%1$1d</xliff:g>s)</string>
    <string name="get_rigister_getvertify_code_1">获取验证码</string>
    <string name="getvertify_name">实名认证</string>
    <string name="certify_picture">证件照</string>
    <string name="certify_postitive_photo">证件正面照</string>
    <string name="certify_reverse_photo">证件反面照</string>
    <string name="submit">提 交</string>
    <string name="check_marks">审核备注</string>
    <string name="account">账号</string>
    <string name="name">姓名</string>
    <string name="your_real_name">您的真实姓名</string>
    <string name="certify_type">证件类型</string>
    <string name="certificate_identification">身份证</string>
    <string name="input_your_certificate_num">请输入你的证件号</string>
    <string name="certificate_num">证件号</string>
    <string name="check_status">审核状态</string>
    <string name="checking">审核中</string>
    <string name="modify">修改</string>
    <string name="cancel">取消</string>
    <string name="search_area_cod">请选择国家或区号</string>
    <string name="entrust_time">委托时间</string>
    <string name="finished">已完成</string>
    <string name="see_detail">查看详情</string>
    <string name="finished_part">部分完成</string>
    <string name="revocation_entrustment">撤销委托</string>
    <string name="revocation_entrustment_question">确认撤销委托？</string>
    <string name="comfirm">确 认</string>
    <string name="confirm">确 认</string>
    <string name="revoke_sure">确认撤销</string>
    <string name="revoke_cancel">取消撤销</string>
    <string name="k_ma5">M5:</string>
    <string name="k_ma10">M10：</string>
    <string name="k_ma20">M20:</string>
    <string name="k_ma30">M30:</string>
    <string name="k_max">高</string>
    <string name="k_open">开</string>
    <string name="k_num">量</string>
    <string name="k_min">低</string>
    <string name="k_exchange">换</string>
    <string name="k_amount">额</string>
    <string name="thousand_unit">万手</string>
    <string name="billion_unit">亿手</string>
    <string name="net_connect_error">网络连接失败，请检查网络后重试</string>
    <string name="login_account">登录账号</string>
    <string name="login_password">登录密码</string>
    <string name="vertify_code_count">获取验证码(60s)</string>
    <string name="register_account_notice">字母、数字，6～16个字符</string>
    <string name="phone">手机号</string>
    <string name="user_phone">用户手机号</string>
    <string name="phone_old">原手机号</string>
    <string name="phone_86">+86</string>
    <string name="six_sms_vertification_code">6位短信验证码</string>
    <string name="login_password_again">重复登录密码</string>
    <string name="login_password_again_notice">再次输入登录密码</string>
    <string name="exchange_password_again_notice">再次输入交易密码</string>
    <string name="your_account">您的账号</string>
    <string name="new_password">新密码</string>
    <string name="password_again">重复密码</string>
    <string name="input_new_password">再次输入新密码</string>
    <string name="find_back_login_pwd">找回密码</string>
    <string name="select_certify_type">选择证件类型</string>
    <string name="passport">护照</string>
    <string name="re_certification">重新认证</string>
    <string name="sy_exchange">盛源交易所</string>
    <string name="dealer_name">经销商名称</string>
    <string name="user_account">用户账号</string>
    <string name="proportion_cny">比例(CNY)</string>
    <string name="proportion_usd">比例(USD)</string>
    <string name="trade_quotas">交易限量(个)</string>
    <string name="region">地区</string>
    <string name="go_exchange">去交易</string>
    <string name="not_record">暂无记录</string>
    <string name="currency">链</string>
    <string name="name_1">名称</string>
    <string name="exchange_day_volume">日成交量</string>
    <string name="current_xt_price">当前价(XT)</string>
    <string name="current_xt_price_1">当前价(XT):</string>
    <string name="xt_price">价格(XT)</string>
    <string name="day_rise_and_fall">日涨跌</string>
    <string name="cerrecy_select_failed">当前链页面选择失败，请退出重新选择</string>
    <string name="highest">最高</string>
    <string name="lowest">最低</string>
    <string name="buy_one">买一</string>
    <string name="sell_one">卖一</string>
    <string name="buy_or_sell">买/卖</string>
    <string name="type">类型</string>
    <string name="price_dollars">单价($)</string>
    <string name="have_exchange">已成交</string>
    <string name="operation">操作</string>
    <string name="total_assets">总资产：</string>
    <string name="xt">XT</string>
    <string name="frozen_assets">冻结资产：</string>
    <string name="available_assets">可用资产：</string>
    <string name="exchange_password_login_notice">每次登录只输一次密码</string>
    <string name="exchange_password_exchange_notice">每笔交易都输入交易密码</string>
    <string name="frozen_amount_1">冻结数量：</string>
    <string name="frozen_amount">冻结数量</string>
    <string name="available_amount_1">可用数量：</string>
    <string name="available_amount">可用数量</string>
    <string name="buy_1">购买</string>
    <string name="buy_2">回购</string>
    <string name="distributor">经销商</string>
    <string name="field_1">(场内)</string>
    <string name="outside_1">(场外)</string>
    <string name="mine_info">个人信息</string>
    <string name="currency_assets">链资产</string>
    <string name="mine_recode">我的记录</string>
    <string name="get_lian">链提取</string>
    <string name="chain_withdraw">链提取</string>
    <string name="withdrawls_money">我要提链</string>
    <string name="system_notice">系统公告</string>
    <string name="system_notice_details">公告详情</string>
    <string name="help_center">帮助中心</string>
    <string name="connect_service">联系客服</string>
    <string name="software_info">软件信息</string>
    <string name="go_pay">去支付</string>
    <string name="buy_amount">购买数量</string>
    <string name="sold_amount">出售数量</string>
    <string name="buy_hint_notice">您要购买的数量，单位：个</string>
    <string name="sold_hint_notice">您要出售的数量，单位：个</string>
    <string name="proportion">比例</string>
    <string name="total_price">总价</string>
    <string name="dollars">$</string>
    <string name="pay_method">支付方式</string>
    <string name="shell_method">收款方式</string>
    <string name="payment_type">转账方式</string>
    <string name="pay_method_select">请选择收款方式</string>
    <string name="sell_method_select">请选择付款方式</string>
    <string name="bank_card_transfer">银行卡转账</string>
    <string name="modify_pay_password">修改支付密码</string>
    <string name="modify_password">修改密码</string>
    <string name="modify_phone_num">修改手机号</string>
    <string name="login_out">退出登录</string>
    <string name="person_info">个人信息</string>
    <string name="currency_total_assets">链总资产</string>
    <string name="look_more">查看更多</string>
    <string name="dealer_managment">经销商管理</string>
    <string name="area">地区</string>
    <string name="exchange_limit_cny">交易限量(个)</string>
    <string name="exchange_limit">交易限量</string>
    <string name="delete">删除</string>
    <string name="send_advertisement">发起广告</string>
    <string name="delete_operation">删除操作</string>
    <string name="deletions">确定删除？</string>
    <string name="register_recode">委托记录</string>
    <string name="transaction_recode">成交记录</string>
    <string name="currency_recharge">充链记录</string>
    <string name="currency_recode">提链记录</string>
    <string name="outside_exchange_recode">场外交易记录</string>
    <string name="outside_exchange_recode_agcy">场外交易记录(经销商)</string>
    <string name="hot_topic">热门话题</string>
    <string name="look_details">查看详情</string>
    <string name="dealed">已处理</string>
    <string name="commit_problem">提交问题</string>
    <string name="check_update">检查更新</string>
    <string name="alipay_transfer">支付宝转账</string>
    <string name="bank_card_num">银行卡号</string>
    <string name="your_bank_card_num">您的银行卡号</string>
    <string name="bank_name_notice">该银行卡的银行名称</string>
    <string name="bank_name">银行名称</string>
    <string name="bank_branch_name">支行名称</string>
    <string name="bank_branch_name_notice">该银行卡的银行支行名称</string>
    <string name="bank_reserve_name">银行预留姓名</string>
    <string name="bank_reserve_name_notice">该银行卡的银行预留姓名</string>
    <string name="bank_reserve_phone_num">银行预留电话</string>
    <string name="bank_reserve_phone_num_notice">该银行卡的银行预留电话</string>
    <string name="alipay_account">支付宝账号</string>
    <string name="asterisk">*</string>
    <string name="bank_card_transfer_info">银行卡转账信息</string>
    <string name="alipay_transfer_info">支付宝转账信息</string>
    <string name="your_alipay_account">您的支付宝账号</string>
    <string name="receipt_code">收款码</string>
    <string name="upload_receipt_alipay_code">请上传支付宝收款二维码</string>
    <string name="wechat_account">微信账号</string>
    <string name="your_wechat_account">您的微信账号</string>
    <string name="upload_receipt_wechat_code">请上传微信收款二维码</string>
    <string name="wechat_transfer_info">微信转账信息</string>
    <string name="qr_code">二维码</string>
    <string name="select_file">请选择文件</string>
    <string name="text_digits_3">qwertyuiopasdfghjklzxcvbnm1234567890QWERTYUIOPASDFGHJKLZXCVBNM-_@.</string>
</resources>