<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/y28"
    android:background="@color/color_gray_7"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x15"
        android:text="@string/currency"
        android:textColor="@color/color_black_7"
        android:textSize="@dimen/text_size_14"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x110"
        android:text="@string/exchange_day_volume"
        android:textColor="@color/color_black_7"
        android:textSize="@dimen/text_size_14"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x209"
        android:text="@string/current_xt_price"
        android:textColor="@color/color_black_7"
        android:textSize="@dimen/text_size_14"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x303"
        android:text="@string/day_rise_and_fall"
        android:textColor="@color/color_black_7"
        android:textSize="@dimen/text_size_14"/>
</RelativeLayout>
