<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/common_header"/>

    <View style="@style/line1"/>

    <com.qmkj.jydp.ui.widget.ClickItemView
        android:id="@+id/person_info_modify_payment_password_civ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y10"
        app:bottomLine="true"
        app:bottomLineMarginTop="@dimen/y8"
        app:leftText="@string/modify_pay_password"
        app:leftTextColor="@color/color_black_6"
        app:rightIconVisible="true"
        app:rightTextColor="@color/color_black_7"/>

    <com.qmkj.jydp.ui.widget.ClickItemView
        android:id="@+id/person_info_modify_password_civ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bottomLine="true"
        app:bottomLineMarginTop="@dimen/y8"
        app:leftText="@string/modify_password"
        app:leftTextColor="@color/color_black_6"
        app:rightIconVisible="true"
        app:rightTextColor="@color/color_black_7"/>

    <com.qmkj.jydp.ui.widget.ClickItemView
        android:id="@+id/person_info_modify_phone_num_civ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bottomLine="false"
        app:leftText="@string/modify_phone_num"
        app:leftTextColor="@color/color_black_6"
        app:rightIconVisible="true"
        app:rightTextColor="@color/color_black_7"/>

    <TextView
        android:id="@+id/person_info_login_out_bt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y40"
        android:layout_marginTop="@dimen/y25"
        android:layout_marginLeft="@dimen/x16"
        android:layout_marginRight="@dimen/x16"
        android:gravity="center"
        android:textSize="@dimen/text_size_17"
        android:text="@string/login_out"
        android:background="@drawable/shape_login_out_bt"
        android:textColor="@color/color_black_10"/>

</LinearLayout>